        - Changed javascript validation to server side upon submitting calendar events.
        - Merged patch for parsing of non-compliant rfc822 email addresses.
          Thanks bwulf
        - Fixed the addressbook not opening when composing email.
        - Applied patch to fix md5 en/decryption.
          Thanks milosch
        - Fixed login message not showing up.

[0.9.7] - Fixed SQL error in tts
        - Fixed table locking in admin -> edit account
        - Added capability to schedule others and not yourself to calendar.
        - Fixed d/l'ing of files through filemanager.
        - Enhanced Free/Busy calendar view.
        - Fix for repeating events not showing in calendar.
        - Fix for Day View warning in calendar.
        - Fix for TTS with Update by non-email user.
        - Fixed admin/accesslog.php wasn't using phpgw_access_log
        - Fix for Week View warning in calendar.
        - Fix for Matrix View not working with Netscape 6.
        - Added text only feature for navbar
        - Converted navbar to work off templates
        - Merged in patch for filemanager to fix upload in SAFE_MODE
          Thanks s837008
        - Cleaned up mainscreen message section, you can also have a login screen message now.
        - Merged in update for french
        - Merged in update for Spanish
          Thanks gmartine
        - Merged in patch for calendar for year view
          Thanks bwulf
        - session class will now use the HTTP_X_FORWARDED_FOR if a user is behind a proxy server.
        - Merged in patch to fix the addressbook not displaying all of the fields.
          Thanks ydario
        - New Calendar table structures and code.
        - Applied patch to fix set_time_limit() warnings in safe_mode
          Thanks count
        - Fixed warning messages in EMail with/without CC header info.
        - Fixed errors for TTS mailings. 
          (This was actually a problem with email, users not having a 