@@ -24,14 +24,33 @@
   include("header.inc.php");
   // Note: I need to add checks to make sure these apps are installed.
 
+  if (($phpgw_info["user"]["preferences"]["common"]["useframes"] && $phpgw_info["server"]["useframes"] == "allowed")
+     || ($phpgw_info["server"]["useframes"] == "always")) {
+
+     if (! $navbarframe && ! $framebody) {
+        $tpl = new Template($phpgw_info["server"]["template_dir"]);
+        $tpl->set_file(array("frames" => "frames.tpl"));
+
+        $tpl->set_var("navbar_link",$phpgw->link("index.php?navbarframe=True"));
+        $tpl->set_var("body_link",$phpgw->link("index.php?framebody=True"));
+
+        $tpl->pparse("out","frames");
+     }
+     if ($navbarframe) {
+        $phpgw->common->phpgw_header();
+        $phpgw->common->navbar();
+     }
+  } else {
+     $phpgw->common->phpgw_header();
+     $phpgw->common->navbar();  
+  }
+
   if ($cd=="yes" && $phpgw_info["user"]["preferences"]["common"]["default_app"]
       && $phpgw_info["user"]["apps"][$phpgw_info["user"]["preferences"]["common"]["default_app"]]) {
      $phpgw->redirect($phpgw->link($phpgw_info["server"]["webserver_url"] . "/"
 		  . $phpgw_info["user"]["preferences"]["common"]["default_app"] . "/"));
      exit;
   }
-  $phpgw->common->phpgw_header();
-  $phpgw->common->navbar();
 
   $phpgw->common->read_preferences("addressbook");
   $phpgw->common->read_preferences("email");
